# OratioViva

./: .gitignore  AGENTS.md
OratioViva/: .gitignore  INSTALL.md  OratioViva.spec  PROGRESS.md  README.md  pyproject.toml
OratioViva/backend/: README.md  __init__.py  cleanup.py  desktop_app.py  download_models.py  jobs.py  main.py  models.py  requirements-tts.txt  requirements.txt  server.py  tts.py
OratioViva/backend/tests/: test_api.py
OratioViva/frontend/: .env.tauri  README.md  index.html  package-lock.json  package.json  vite.config.js
OratioViva/frontend/src/: App.jsx  App.test.jsx  api.js  styles.css
OratioViva/frontend/src-tauri/: Cargo.toml  tauri.conf.json
OratioViva/frontend/src-tauri/src/: main.rs
OratioViva/scripts/: build.ps1  build_executable.ps1  download_models.py  install.ps1  installer.nsi  launcher.bat  make_app.ps1  setup.ps1  test_models.ps1  test_models.py
