[package]
name = "oratioviva"
version = "0.1.0"
description = "OratioViva desktop (Tauri)"
authors = ["OratioViva"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.6", features = [] }

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = ["shell-open"] }
which = "4.4"
